# ros2_lekiwi

./: .gitignore  README.md  display.launch.py  env_lekiwi.sh  foxglove_arm_demo.py  hsv_tuner.py  ignite.bash  ignite_virtual.bash  lekiwi.code-workspace  lekiwi.rviz  lekiwi_bring_up.launch.py  lekiwi_bring_up_virtual.launch.py  ros2_cmd.sh  start_multi_lekiwi.bash  test_arm.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lekiwi_driver/lib/lekiwi_driver/: base_driver
install/lekiwi_driver/share/lekiwi_driver/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/lekiwi_driver/: package.xml  setup.cfg  setup.py
src/lekiwi_driver/lekiwi_driver/: driver_node.py  lekiwi_arm_driver.py  lekiwi_base_driver.py  lekiwi_brain_node.py  lekiwi_brain_node.py.bak
src/lekiwi_vision/: CMakeLists.txt  package.xml  setup.py
src/lekiwi_vision/config/: yolo_params.yaml
src/lekiwi_vision/launch/: display_arm.launch.py  display_robot.launch.py  red_dot_detector_with_camera.launch.py  rviz_arm.launch.py  yolo_realsense.launch.py
src/lekiwi_vision/meshes/: my_camera_mount.stl  my_pillar.stl  my_servo_mount.stl  riser_base.stl
src/lekiwi_vision/rviz/: urdf.rviz
src/lekiwi_vision/src/: red_dot_detector.py  yolo_trt_node.cpp  yolo_trt_node.cpp.bak
src/lekiwi_vision/urdf/: LeKiwi.urdf  lekiwi_robot.urdf.xacro  so101_arm.urdf
